--- a/cart.html
+++ b/cart.html
@@ -96,13 +96,13 @@
               <div>
                 <label class="radio-inline shipping-type"><input onclick="showTotalCost()" id="standard-shipping"
                     type="radio" name="shipping-type" checked value="0.05">
-                  <span class="badge badge-pill shipping-type">Standard</span></label>
+                  <span class="badge badge-pill shipping-type text-white">Standard</span></label>
                 <label class="radio-inline shipping-type"><input onclick="showTotalCost()" id="express-shipping"
                     type="radio" name="shipping-type" value="0.07">
-                  <span class="badge badge-pill badge-lg">Express</span></label>
+                  <span class="badge badge-pill badge-lg text-white">Express</span></label>
                 <label class="radio-inline shipping-type"><input onclick="showTotalCost()" id="premium-shipping"
                     type="radio" name="shipping-type" value="0.15">
-                  <span class="badge badge-pill">Premium</span></label>
+                  <span class="badge badge-pill shipping-type text-white">Premium</span></label>
               </div>
               <div class="form-group d-flex justify-content-start my-1" style="border-bottom: 1px ridge">
                 <label for="firstname" class="">Dirección de entrega:
@@ -124,9 +124,9 @@
                   <label for="payment-method" class="d-flex justify-content-start">Método de pago:</label>
                   <div>
                     <label class="radio-inline"><input type="radio" name="payment-method" checked value="t/credito">
-                      <span class="badge badge-pill">Tarjeta de Crédito</span></label>
+                      <span class="badge badge-pill text-white">Tarjeta de Crédito</span></label>
                     <label class="radio-inline"><input type="radio" name="payment-method" value="t/bancaria">
-                      <span class="badge badge-pill badge-lg">Transferencia Bancaria</span></label>
+                      <span class="badge badge-pill text-white">Transferencia Bancaria</span></label>
                   </div>
                 </div>
               </div>
