Entregable 7 (menos img2b64)

--- a/cart.html
+++ b/cart.html
@@ -141,21 +141,21 @@
                             <label for="card-num"><small>Nro.</small></label>
                           </div>
                           <div class="col-10">
-                            <input id="card-num" class="form-control" type="text" placeholder="**** **** **** ****"
+                            <input id="card-num" class="form-control credit-input" type="text" placeholder="**** **** **** ****"
                               name="credit-number" disabled>
                           </div>
                           <div class="col-2 my-2">
                             <label for="vto-card"><small>Vto.</small></label>
                           </div>
                           <div class="col-4 my-2">
-                            <input id="vto-card" class="form-control" type="text" class="" placeholder="MM/YYYY"
+                            <input id="vto-card" class="form-control credit-input" type="text" class="" placeholder="MM/YYYY"
                               name="expiration-date" disabled>
                           </div>
                           <div class="col-2 my-2">
                             <label for="cvv-card"><small>CVC/CVV</small></label>
                           </div>
                           <div class="col-4 my-2">
-                            <input id="cvv-card" class="form-control" type="text" placeholder="***" name="security-code"
+                            <input id="cvv-card" class="form-control credit-input" type="text" placeholder="***" name="security-code"
                               disabled>
                           </div>
                         </div>
@@ -176,7 +176,7 @@
                             <label><small>Banco</small></label>
                           </div>
                           <div class="col-10 mb-2">
-                            <select class="form-control bg-light" name="bank" disabled>
+                            <select class="form-control bg-light account-input" name="bank" disabled>
                               <option>BROU</option>
                               <option>Santander</option>
                               <option>Itaú</option>
@@ -190,14 +190,14 @@
                             <label for="account-n"><small>Cuenta:</small></label>
                           </div>
                           <div class="col-10 mb-2">
-                            <input id="account-n" class="form-control" type="text" name="account-number"
+                            <input id="account-n" class="form-control account-input" type="text" name="account-number"
                               placeholder="Número de cuenta" disabled>
                           </div>
                           <div class="col-2">
                             <label for="sucursal-bank"><small>Sucursal:</small></label>
                           </div>
                           <div class="col-5">
-                            <input id="sucursal-bank" class="form-control" type="text" name="sucursal-number"
+                            <input id="sucursal-bank" class="form-control account-input" type="text" name="sucursal-number"
                               placeholder="Sucursal" disabled>
                           </div>
                         </div>
