--- a/categories.html
+++ b/categories.html
@@ -78,9 +78,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="list-group" id="cat-list-container">
-        </div>
+      <div id="cat-list-container" class="row mt-3">
       </div>
     </div>
   </main>
